# dual

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  eslint.config.js  flake.nix  index.html  package.json  prettier.config.js  pycodestyle.cfg  pyproject.toml  response.md  scratch.py  stylelint.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: cclsp.json
dual/: __init__.py  __main__.py  app.py  bloom.py  elo.py
dual/app/: __init__.py  __main__.py
dual/audio/: __init__.py  client.py  player.py
dual/db/: __init__.py  core.py  item.py  track.py
dual/query/: __init__.py  __main__.py
dual/strategy/: __init__.py  bisect.py  quicksort.py
server/: index.ts
server/api/: categorize.ts  comparison.ts  index.ts  pairs.ts  schemas.ts  task.ts  worker.ts
server/db/: album_queries.ts  index.ts  item_queries.ts  query.ts  schema.ts  score_queries.ts
server/query/: index.ts
server/utils/: elo.ts  glicko2.ts  hash.ts
src/: Order.tsx  app.css  app.scss  app.tsx  index.html  index.tsx  landing.tsx
src/components/: AlbumGroup.tsx  AudioProgress.test.tsx  AudioProgress.tsx  BucketSelector.test.tsx  BucketSelector.tsx  CategorizeCard.tsx  CategorizeStats.test.tsx  CategorizeStats.tsx  ComparisonCard.tsx  ControlBand.tsx  Player.test.tsx  Player.tsx  ScoreDisplay.test.tsx  ScoreDisplay.tsx  TrackList.tsx
src/hooks/: useKeyboard.ts  useReviewAudio.ts
src/lib/: AudioPlayer.ts  index.ts
src/pages/: Categorize.tsx  Review.tsx
src/schemas/: track.ts
src/stores/: categorizeStore.ts  reviewStore.ts
src/style/: _config.scss  (+2 more)
(+41 files in other folders)
