[tool.poetry]
name = "dual"
version = "0.1.0"
description = ""
authors = ["Matt Palmer <palmer.s.matt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
dual = "dual:main"
