[project]
name = "dual"
readme = "README.md"
license = { file = "LICENSE.txt" }

version = "0.0.1"
requires-python = ">=3.11"

authors = [
  {name = "Matt Palmer", email = "matt@msp.dev" }
]

dependencies = [
  "urwid",
  "redis",
  "peewee",
  "mmh3",
  "bitarray"
]

[project.optional-dependencies]
dev = ["check-manifest", "ipython"]
test = ["coverage"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
